--- a/templates/webapp/logo.html
+++ b/templates/webapp/logo.html
@@ -6,9 +6,9 @@
             <h1>Welcome, guest</h1>
         {% endif %}
         <p class="lead">
-            Esta es una página de inicio provisional.
+            {% trans "This is a provisional starting page" %}
             <br>
-            En construcción and stuff.
+            {% trans "Under construction" %}
         </p>
 
         <svg class="patho path" version="1.1" id="eathub-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
