--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -25,7 +25,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                        <span class="sr-only">{% trans "Toggle navigation" %}</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -37,9 +37,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="{% url 'main' %}">Home</a></li>
-                        <li><a href="#">Recipes</a></li>
-                        <li><a href="#">Explore</a></li>
+                        <li class="active"><a href="{% url 'main' %}">{% trans "Home" %}</a></li>
+                        <li><a href="#">{% trans "Recipes" %}</a></li>
+                        <li><a href="#">{% trans "Explore" %}</a></li>
                         <li class="divider-vertical"></li>
                     </ul>
 
@@ -65,22 +65,22 @@
                                     {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}"/>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="{% url 'profile' user.username %}">Profile</a></li>
+                                    <li><a href="{% url 'profile' user.username %}">{% trans "Profile" %}</a></li>
                                     <li><a href="">Settings</a> </li>
                                     <li class="divider"></li>
-                                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                                    <li><a href="{% url 'logout' %}">{% trans "Logout" %}</a></li>
                                 </ul>
                             </li>
                             <li>
                                 <div>
                                     <a type="button" class="plus btn btn-default" href="{% url 'newrecipe' %}">
-                                        <span class="glyphicon glyphicon-plus"></span>Add recipe
+                                        <span class="glyphicon glyphicon-plus"></span>{% trans "Add recipe" %}
                                     </a>
                                 </div>
                             </li>
                         {% else %}
                             <a class="plus btn btn-default" href="{% url 'login' %}" role="button">Log in</a>
-                            <a class="plus btn btn-default" href="{% url 'newaccount' %}">Sign-up</a>
+                            <a class="plus btn btn-default" href="{% url 'newaccount' %}">{% trans "Sign-up" %}</a>
                         {% endif %}
                     </ul>
                 </div>
