Cambio en los views y templates, las referencias al User y al Profile

--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="recipe-author panel-body">
                             <h5>Recipe by</h5>
-                            <span><a class="recipe-link" href="#">{{ receta.author.display_name }}</a></span>
+                            <span><a class="recipe-link" href="{% url 'profile' receta.author.username %}">{{ receta.author.profile.get.display_name }}</a></span>
                         </div>
                     </div>
                     <div class="row">
