--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="recipe-author">
 					<h5>by</h5>
-					<span><a class="recipe-link" href="{% url 'profile' recipe.author.user_name %}">{{ recipe.author.display_name }}</a></span>
+					<span><a class="recipe-link" href="{% url 'profile' recipe.author.username %}">{{ recipe.author.profile.get.display_name }}</a></span>
 				</div>
 			</div>
 			<br />
