Corregido el problema para mostrar las imagenes en la tarjeta.

--- a/templates/webapp/recipes.html
+++ b/templates/webapp/recipes.html
@@ -11,7 +11,7 @@
 
                 <div class="col-md-3 panel follow-list-item">
                     <img class="img-rounded"
-                         src="{{ recipe.picture.0 }}"/>
+                         src="{{ recipe.pictures.0 }}"/>
 
                     <h3 class="user-name"><a href="{% url 'recipe' recipe.id %}">
                         {{ recipe.title }}</a></h3>
