Añadido tiempo de preparacion a la tarjeta. Faltaria fijar los limites para que las tarjetas no tengan tamaños distintos.

--- a/templates/webapp/recipes.html
+++ b/templates/webapp/recipes.html
@@ -16,6 +16,10 @@
                     <h3 class="user-name"><a href="{% url 'recipe' recipe.id %}">
                         {{ recipe.title }}</a></h3>
 
+                    <div class="recipe-time panel-body pull-right">
+                        <span class="glyphicon glyphicon-time"></span>
+                        <p>{{ recipe.time.prep_time }}</p>
+                    </div>
                     <!--<p class="location">
                         <span class="glyphicon glyphicon-map-marker"></span><span>{{ friend_profile.location }}</span>
                     </p>-->
