Corregido el css de la lista de recetas de usuario para que el titulo de la receta no modifique las dimensiones de las tarjetitas.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -690,3 +690,18 @@ header .container {
 .vote{
     padding-right: 12px;
 }
+
+
+.recipe-max-height {
+    height: 95px;
+}
+
+
+.limit-text {
+    overflow:hidden;
+}
+
+.recipe-title-max-height {
+    height: 25px;
+}
+
