Creada clase embebida para las imagenes del album como solucion al problema de listfield y imagefield.

--- a/templates/webapp/recipe_template.html
+++ b/templates/webapp/recipe_template.html
@@ -195,7 +195,7 @@
                         {% if receta.pictures %}
                             <ul>
                                 {% for picture in receta.pictures %}
-                                    <li><img class="img-thumbnail" src="/{{ picture }}"/></li>
+                                    <li><img class="img-thumbnail" src="{{ picture.image.url }}"/></li>
                                 {% endfor %}
                             </ul>
                         {% else %}
