--- a/templates/webapp/login.html
+++ b/templates/webapp/login.html
@@ -1,8 +1,39 @@
 {% extends "webapp/base.html" %}
 
 {% load i18n %}
+{% load staticfiles %}
+
+{% block custom_css %}
+    <link href="{% static 'webapp/css/social-buttons-3.css' %}" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+{% endblock %}
+
+{% block custom_js %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+    <script id="script" type="text/javascript">
+        (function () {
+        var po = document.createElement('script');
+        po.type = 'text/javascript';
+        po.async = true;
+        po.src = 'https://plus.google.com/js/client:plusone.js?onload=start';
+        var s = document.getElementById('script');
+        s.parentNode.insertBefore(po, s);
+    })();
+    var signInCallback = function (result) {
+            if (result['error']) {
+                alert('An error happened:', result['error']);
+            } else {
+                $('#code').attr('value', result['code']);
+                $('#at').attr('value', result['access_token']);
+                $('#google-plus').submit();
+            }
+        };
+    </script>
+
+{% endblock %}
 
 {% block container %}
+    <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
         <form class="panel panel-default panel-body" role="form" action="{% url 'login' %}" method="post">
@@ -22,7 +53,6 @@
                 </div>
             {% endfor %}
             <div class="form-group">
-                {% csrf_token %}
                 {% csrf_token %}
                 {% if next %}
                     <input type="hidden" name="next" value="{{ next }}"/>
@@ -46,6 +76,31 @@
                 {% trans "Sign in" %}
             </button>
         </form>
+        <form id="google-plus" method="post" action="{% url 'social:complete' "google-plus" %}">{% csrf_token %}
+            <input id="at" type="hidden" name="access_token" value="" />
+            <input id="code" type="hidden" name="code" value="" />
+        </form>
     </div>
     <div class="col-md-4"></div>
+    </div>
+    <div class="row col-md-offset-2 col-md-8">
+        <div class="panel panel-body">
+            <div class="row">
+                <div class="col-md-4"><div id="signinButton">
+                <span class="g-signin"
+                      data-scope="https://www.googleapis.com/auth/plus.login
+                      https://www.googleapis.com/auth/userinfo.email"
+                      data-clientid="1064237235002-4h80pv6pq4q0hjji74p5mu3a11ot11f1.apps.googleusercontent.com"
+                      data-redirecturi="postmessage"
+                      data-accesstype="offline"
+                      data-approvalprompt="force"
+                      data-cookiepolicy="single_host_origin"
+                      data-callback="signInCallback">
+                </span>
+            </div></div>
+                <div class="col-md-4"><a disabled class="btn btn-twitter" href="{% url 'social:begin' 'twitter' %}?next={% url 'main' %}"><i class="fa fa-twitter"></i> | Login with Twitter</a></div>
+                <div class="col-md-4"><a class="btn btn-facebook" href="{% url 'social:begin' 'facebook' %}?next={% url 'main' %}"><i class="fa fa-facebook"></i> | Login with Facebook</a></div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
